drools-idea-plugin/src/ru/ganev/intellij/plugins/drools/Drl.bnf
{
  parserClass="ru.ganev.intellij.plugins.drools.parser.DrlParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Drl"
  psiImplClassSuffix="Impl"
  psiPackage="ru.ganev.intellij.plugins.drools.psi"
  psiImplPackage="ru.ganev.intellij.plugins.drools.psi.impl"

  elementTypeHolderClass="ru.ganev.intellij.plugins.drools.psi.DrlTypes"
  elementTypeClass="ru.ganev.intellij.plugins.drools.psi.DrlElementType"
  tokenTypeClass="ru.ganev.intellij.plugins.drools.psi.DrlTokenType"

}

drl ::=

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//Primitive elements
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
simple_identifier ::= "a..z" { "a..z,A..Z,0..9 " }
package_identifier ::= "a..z" { "a..z" }
integer_literal ::= "0..9" {"0..9"}
comment ::= "//"
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//Complex elements
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
package_name ::= package_identifier { "." package_identifier } ";"
class_name ::= simple_identifier | ( package_name "." simple_identifier )
type_specifier ::= "boolean" | "byte" | "char" | "short" | "int" | "float" | "long" | "double" | class_name
type ::= type_specifier { "[" "]" }
parameter ::= type simple_identifier { "[" "]" }
parameter_list ::= parameter { "," parameter }

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//File elements
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
package_statement ::= "package" package_name ";"
import_statement ::= "import" ( ( package_name "." "*" ) | class_name ) ";"
global_statement ::= "global" class_name " " simple_identifier ";"

function_declaration ::= "function" ("void" | type) simple_identifier "(" [ parameter_list ] ")"

salience_statement ::= "salience" integer_literal
rule_statement ::= "rule" simple_identifier
                   {salience_statement}
                   "when"
                   "then"
                   "end"

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//File structure
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
droolsFile ::=
      [ package_statement ]
      { import_statement }
      { global_statement}
      { function_declaration }
      { rule_statement }
